<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_main"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_mvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:onClick="Onclick"
        android:text="@string/mvc"/>

    <Button
        android:id="@+id/btn_mvp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:onClick="Onclick"
        android:text="@string/mvp"/>
    <Button
        android:id="@+id/btn_mvvm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:onClick="Onclick"
        android:text="@string/mvvm"/>

</LinearLayout>